[gd_scene load_steps=6 format=3 uid="uid://dy310rous282n"]

[ext_resource type="Script" path="res://assets/objects/menus/selecter.gd" id="1_r3tmw"]
[ext_resource type="Texture2D" uid="uid://c41813liwmw0c" path="res://assets/sprites/menus/text_difficulty.png" id="2_vhmyh"]
[ext_resource type="Texture2D" uid="uid://d3rfhmap2rg2r" path="res://assets/sprites/menus/selecter.png" id="3_2o7cy"]
[ext_resource type="AudioStream" uid="uid://c4wqpakvse6f1" path="res://assets/sounds/snd_squeak.wav" id="4_lm1nv"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_s11wv"]
blend_mode = 2

[node name="Selecter" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r3tmw")
texture = ExtResource("2_vhmyh")

[node name="Text" type="TextureRect" parent="."]
custom_minimum_size = Vector2(5, 5)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -2.5
offset_right = 46.0
offset_bottom = 2.5
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("2_vhmyh")
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Text"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = -1
theme_override_constants/margin_top = -1
theme_override_constants/margin_right = -1
theme_override_constants/margin_bottom = -1

[node name="ColorRect" type="ColorRect" parent="Text/MarginContainer"]
material = SubResource("CanvasItemMaterial_s11wv")
layout_mode = 2
size_flags_horizontal = 0

[node name="Selecters_Container" type="Control" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -27.0
grow_horizontal = 0
grow_vertical = 2

[node name="Selecter" type="Sprite2D" parent="Selecters_Container"]
position = Vector2(-2.5, 0.5)
texture = ExtResource("3_2o7cy")
hframes = 4

[node name="Selecter2" type="Sprite2D" parent="Selecters_Container"]
position = Vector2(6.5, 0.5)
texture = ExtResource("3_2o7cy")
hframes = 4

[node name="Selecter3" type="Sprite2D" parent="Selecters_Container"]
position = Vector2(15.5, 0.5)
texture = ExtResource("3_2o7cy")
hframes = 4

[node name="Selecter4" type="Sprite2D" parent="Selecters_Container"]
position = Vector2(23.5, 0.5)
texture = ExtResource("3_2o7cy")
hframes = 4

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_lm1nv")
volume_db = 12.0
bus = &"Effects"
